<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >
         
          <Button
               android:id="@+id/button1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/activity_horizontal_margin"
               android:layout_weight="1"
               android:text="@string/button1" />
           
           <Button
               android:id="@+id/button2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/activity_horizontal_margin"
               android:layout_weight="1"
               android:text="@string/button2" />

           <Button
               android:id="@+id/button3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/activity_horizontal_margin"
               android:layout_weight="1"
               android:text="@string/button3" />

       </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/music_name"
            android:textSize="@dimen/size" />
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/music_author"
            android:textSize="@dimen/size" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
       
        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_weight="1"
            android:text="@string/time1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/left"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/time2" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    
</LinearLayout>
